--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Würfelaktion</title>
+  <title>Würfelaktion mit Statistik</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -14,13 +15,13 @@
       font-size: 100px;
       margin: 20px;
     }
-    .dice {
-      display: inline-block;
-      margin: 0 20px;
-    }
     button {
       padding: 10px 20px;
       font-size: 18px;
+    }
+    canvas {
+      max-width: 600px;
+      margin: 40px auto;
     }
   </style>
 </head>
@@ -34,15 +35,48 @@
   <button onclick="rollDice()">Würfeln</button>
   <p id="result"></p>
 
+  <canvas id="statsChart"></canvas>
+
   <script>
+    const diceFaces = ['⚀','⚁','⚂','⚃','⚄','⚅'];
+    const stats = Array(11).fill(0); // Für Summen 2 bis 12 (Index 0 = Summe 2)
+
+    const ctx = document.getElementById('statsChart').getContext('2d');
+    const statsChart = new Chart(ctx, {
+      type: 'bar',
+      data: {
+        labels: Array.from({length: 11}, (_, i) => (i + 2).toString()),
+        datasets: [{
+          label: 'Häufigkeit der gewürfelten Summe',
+          data: stats,
+          backgroundColor: 'rgba(54, 162, 235, 0.7)',
+          borderColor: 'rgba(54, 162, 235, 1)',
+          borderWidth: 1
+        }]
+      },
+      options: {
+        scales: {
+          y: {
+            beginAtZero: true,
+              ticks: {
+              stepSize: 1
+            }
+          }
+        }
+      }
+    });
+
     function rollDice() {
       const number1 = Math.floor(Math.random() * 6) + 1;
       const number2 = Math.floor(Math.random() * 6) + 1;
       const sum = number1 + number2;
-      const diceFaces = ['⚀','⚁','⚂','⚃','⚄','⚅'];
+
       document.getElementById('dice1').textContent = diceFaces[number1 - 1];
       document.getElementById('dice2').textContent = diceFaces[number2 - 1];
-      document.getElementById('result').textContent = `Du hast eine ${number1} und eine ${number2} gewürfelt. Summe: ${sum}`;
+      document.getElementById('result').textContent = `Gesamtergebnis: ${sum}`;
+
+      stats[sum - 2]++;
+      statsChart.update();
     }
   </script>
 
