--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       font-size: 14px;
     }
     .dice-container {
-      font-size: 100px;
+      font-size: 80px;
       margin: 20px;
     }
     .dice {
@@ -69,8 +69,10 @@
   <div class="dice-container">
     <div class="dice" id="dice1" onclick="rollDice()">🎲</div>
     <div class="dice" id="dice2" onclick="rollDice()">🎲</div>
+    <div class="dice" id="dice3" onclick="rollDice()">🟡</div>
   </div>
   <p id="result"></p>
+  <p id="thirdResult"></p>
 
   <div id="effectBox">
     <div id="effectText"></div>
@@ -84,17 +86,20 @@
   </div>
 
   <canvas id="statsChart"></canvas>
+  <canvas id="thirdDiceChart"></canvas>
   <button id="resetStatsBtn" onclick="resetStats()">Statistik zurücksetzen</button>
 
   <script>
     const diceFaces = ['⚀','⚁','⚂','⚃','⚄','⚅'];
+    const thirdDiceFaces = ['Vorrücken','Stehenbleiben'];
     const defaultEffects = ["Du musst einmal tanzen!", "Singe ein Lied!", "Erzähle einen Witz!", "Mache 10 Liegestütze!"];
     let effects = JSON.parse(localStorage.getItem("sevenEffects")) || defaultEffects;
     let stats = JSON.parse(localStorage.getItem("diceStats")) || Array(11).fill(0);
+    let thirdDiceStats = JSON.parse(localStorage.getItem("thirdDiceStats")) || [0, 0];
     let rollingDisabled = false;
 
-    const ctx = document.getElementById('statsChart').getContext('2d');
-    const statsChart = new Chart(ctx, {
+    const ctx1 = document.getElementById('statsChart').getContext('2d');
+    const statsChart = new Chart(ctx1, {
       type: 'bar',
       data: {
         labels: Array.from({length: 11}, (_, i) => (i + 2).toString()),
@@ -116,6 +121,19 @@
       }
     });
 
+    const ctx2 = document.getElementById('thirdDiceChart').getContext('2d');
+    const thirdDiceChart = new Chart(ctx2, {
+      type: 'pie',
+      data: {
+        labels: ['Vorrücken', 'Stehenbleiben'],
+        datasets: [{
+          label: 'Häufigkeit dritter Würfel',
+          data: thirdDiceStats,
+          backgroundColor: ['#2ecc71', '#e74c3c']
+        }]
+      }
+    });
+
     function rollDice() {
       if (rollingDisabled) return;
 
@@ -123,15 +141,24 @@
 
       const number1 = Math.floor(Math.random() * 6) + 1;
       const number2 = Math.floor(Math.random() * 6) + 1;
+      const third = Math.floor(Math.random() * 6);
+      const thirdOutcome = third < 3 ? 'Vorrücken' : 'Stehenbleiben';
       const sum = number1 + number2;
 
       document.getElementById('dice1').textContent = diceFaces[number1 - 1];
       document.getElementById('dice2').textContent = diceFaces[number2 - 1];
+      document.getElementById('dice3').textContent = thirdOutcome === 'Vorrücken' ? '➡️' : '⛔️';
       document.getElementById('result').textContent = `Gesamtergebnis: ${sum}`;
+      document.getElementById('thirdResult').textContent = `Dritter Würfel: ${thirdOutcome}`;
 
       stats[sum - 2]++;
       localStorage.setItem("diceStats", JSON.stringify(stats));
       statsChart.update();
+
+      if (thirdOutcome === 'Vorrücken') thirdDiceStats[0]++;
+      else thirdDiceStats[1]++;
+      localStorage.setItem("thirdDiceStats", JSON.stringify(thirdDiceStats));
+      thirdDiceChart.update();
 
       if (sum === 7) {
         const randomEffect = effects[Math.floor(Math.random() * effects.length)];
@@ -167,9 +194,13 @@
 
     function resetStats() {
       stats = Array(11).fill(0);
+      thirdDiceStats = [0, 0];
       localStorage.setItem("diceStats", JSON.stringify(stats));
+      localStorage.setItem("thirdDiceStats", JSON.stringify(thirdDiceStats));
       statsChart.data.datasets[0].data = stats;
       statsChart.update();
+      thirdDiceChart.data.datasets[0].data = thirdDiceStats;
+      thirdDiceChart.update();
     }
   </script>
 
