--- a/index.html
+++ b/index.html
@@ -31,6 +31,21 @@
       max-width: 100%;
     }
     #effectBox {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 9999;
+      background: #fffdf7;
+      border: 3px solid #e67e22;
+      border-radius: 12px;
+      padding: 30px;
+      width: 300px;
+      max-width: 90%;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+      text-align: center;
+      display: none;
+    }
       margin: 20px auto;
       padding: 20px;
       border: 2px solid #f39c12;
@@ -79,7 +94,8 @@
   <p id="thirdResult"></p>
 
   <div id="effectBox">
-    <div id="effectText"></div>
+    <div id="effectTitle" style="font-size: 22px; font-weight: bold; color: #d35400; margin-bottom: 10px;"></div>
+    <div id="effectText" style="font-size: 16px;"></div>
     <button onclick="closeEffect()">Effekt ausführen</button>
   </div>
 
@@ -173,7 +189,11 @@
 
       if (sum === 7) {
         const randomEffect = effects[Math.floor(Math.random() * effects.length)];
-        document.getElementById('effectText').textContent = randomEffect;
+        const [title, ...textParts] = randomEffect.split(":");
+      const effectTitle = title?.trim() || "Ereignis";
+      const effectText = textParts.join(":").trim();
+      document.getElementById('effectTitle').textContent = effectTitle;
+      document.getElementById('effectText').textContent = effectText;
         document.getElementById('effectBox').style.display = 'block';
       } else {
         rollingDisabled = false;
