--- a/index.html
+++ b/index.html
@@ -235,5 +235,18 @@
     }
   </script>
 
+
+<button id="reset-all" class="px-4 py-2 bg-red-600 text-white rounded absolute bottom-4 left-4">Standard Wiederherstellen</button>
+
+<div id="reset-confirmation" class="fixed inset-0 bg-black bg-opacity-60 flex items-center justify-center hidden z-50">
+  <div class="bg-white p-6 rounded-lg w-96 relative">
+    <h2 class="text-red-600 text-xl font-bold mb-4 text-center">Sicher das sie alle Daten zurücksetzen wollen, ein Wiederherstellen ist dan nicht mehr Möglich</h2>
+    <div class="flex justify-between">
+      <button id="cancel-reset" class="bg-gray-400 text-white px-4 py-2 rounded">Abbruch</button>
+      <button id="confirm-reset" class="bg-red-600 text-white px-4 py-2 rounded">Ich bin mir sicher</button>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
