--- a/index.html
+++ b/index.html
@@ -4,15 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Würfelaktion mit Effekten</title>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js">
-  location.reload();
-});
-
-
-  location.reload();
-});
-
-</script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -241,23 +233,7 @@
       thirdDiceChart.data.datasets[0].data = thirdDiceStats;
       thirdDiceChart.update();
     }
-  
-  location.reload();
-});
+  </script>
 
-
-  location.reload();
-});
-
-</script>
-
-
-
-  </div>
-</div>
-
-
-  </div>
-</div>
 </body>
 </html>
