--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -27,6 +26,10 @@
       margin: 0 20px;
       cursor: pointer;
     }
+    .dice:hover {
+      transform: scale(1.2);
+      transition: transform 0.2s ease;
+    }
     canvas {
       max-width: 100%;
     }
@@ -40,18 +43,12 @@
       border: 3px solid #e67e22;
       border-radius: 12px;
       padding: 30px;
-      width: 400px; height: 300px;
-      max-width: 90%;
+      width: 90vw;
+      max-width: 400px;
+      height: 300px;
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
       text-align: center;
       display: none;
-    }
-      margin: 20px auto;
-      padding: 20px;
-      border: 2px solid #f39c12;
-      background-color: #fff7e6;
-      display: none;
-      max-width: 400px;
     }
     #effectText {
       font-size: 20px;
@@ -81,7 +78,6 @@
   </style>
 </head>
 <body>
-
   <button id="editButton" onclick="toggleEdit()">Effekte bearbeiten</button>
 
   <h1>Würfelaktion</h1>
@@ -190,10 +186,10 @@
       if (sum === 7) {
         const randomEffect = effects[Math.floor(Math.random() * effects.length)];
         const [title, ...textParts] = randomEffect.split(":");
-      const effectTitle = title?.trim() || "Ereignis";
-      const effectText = textParts.join(":").trim();
-      document.getElementById('effectTitle').textContent = effectTitle;
-      document.getElementById('effectText').textContent = effectText;
+        const effectTitle = title?.trim() || "Ereignis";
+        const effectText = textParts.join(":").trim();
+        document.getElementById('effectTitle').textContent = effectTitle;
+        document.getElementById('effectText').textContent = effectText;
         document.getElementById('effectBox').style.display = 'block';
       } else {
         rollingDisabled = false;
@@ -234,6 +230,5 @@
       thirdDiceChart.update();
     }
   </script>
-
 </body>
 </html>
