--- a/index.html
+++ b/index.html
@@ -1,18 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="de">
 <head>
   <meta charset="UTF-8">
   <title>Würfelaktion mit Effekten</title>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js">
-  location.reload();
-});
-
-
-  location.reload();
-});
-
-</script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -35,6 +26,10 @@
       margin: 0 20px;
       cursor: pointer;
     }
+    .dice:hover {
+      transform: scale(1.2);
+      transition: transform 0.2s ease;
+    }
     canvas {
       max-width: 100%;
     }
@@ -48,18 +43,12 @@
       border: 3px solid #e67e22;
       border-radius: 12px;
       padding: 30px;
-      width: 400px; height: 300px;
-      max-width: 90%;
+      width: 90vw;
+      max-width: 400px;
+      height: 300px;
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
       text-align: center;
       display: none;
-    }
-      margin: 20px auto;
-      padding: 20px;
-      border: 2px solid #f39c12;
-      background-color: #fff7e6;
-      display: none;
-      max-width: 400px;
     }
     #effectText {
       font-size: 20px;
@@ -89,7 +78,6 @@
   </style>
 </head>
 <body>
-
   <button id="editButton" onclick="toggleEdit()">Effekte bearbeiten</button>
 
   <h1>Würfelaktion</h1>
@@ -127,7 +115,7 @@
   <script>
     const diceFaces = ['⚀','⚁','⚂','⚃','⚄','⚅'];
     const thirdDiceFaces = ['Vorrücken','Stehenbleiben'];
-    const defaultEffects = ["Knappheit: Jeder Spieler wählt eine Rohstoff- oder Handelswarenkarte und gibt sie ab. Sie wird in den Vorrat zurückgelegt.", "Singe ein Lied!", "Erzähle einen Witz!", "Mache 10 Liegestütze!"];
+    const defaultEffects = ["Knappheit:Jeder Spieler wählt eine Rohstoff- oder Handelswarenkarte und gibt sie ab. Sie wird in den Vorrat zurückgelegt.", "Singe ein Lied!", "Erzähle einen Witz!", "Mache 10 Liegestütze!"];
     let effects = JSON.parse(localStorage.getItem("sevenEffects")) || defaultEffects;
     let stats = JSON.parse(localStorage.getItem("diceStats")) || Array(11).fill(0);
     let thirdDiceStats = JSON.parse(localStorage.getItem("thirdDiceStats")) || [0, 0];
@@ -198,10 +186,10 @@
       if (sum === 7) {
         const randomEffect = effects[Math.floor(Math.random() * effects.length)];
         const [title, ...textParts] = randomEffect.split(":");
-      const effectTitle = title?.trim() || "Ereignis";
-      const effectText = textParts.join(":").trim();
-      document.getElementById('effectTitle').textContent = effectTitle;
-      document.getElementById('effectText').textContent = effectText;
+        const effectTitle = title?.trim() || "Ereignis";
+        const effectText = textParts.join(":").trim();
+        document.getElementById('effectTitle').textContent = effectTitle;
+        document.getElementById('effectText').textContent = effectText;
         document.getElementById('effectBox').style.display = 'block';
       } else {
         rollingDisabled = false;
@@ -241,23 +229,6 @@
       thirdDiceChart.data.datasets[0].data = thirdDiceStats;
       thirdDiceChart.update();
     }
-  
-  location.reload();
-});
-
-
-  location.reload();
-});
-
-</script>
-
-
-
-  </div>
-</div>
-
-
-  </div>
-</div>
+  </script>
 </body>
 </html>
