--- a/index.html
+++ b/index.html
@@ -85,9 +85,11 @@
     <div class="dice" id="dice1" onclick="rollDice()">🎲</div>
     <div class="dice" id="dice2" onclick="rollDice()">🎲</div>
     <div class="dice" id="dice3" onclick="rollDice()">🟡</div>
+    <div class="dice" id="dice4" onclick="rollDice()">🔵</div>
   </div>
   <p id="result"></p>
   <p id="thirdResult"></p>
+  <p id="fourthResult"></p>
 
   <div id="effectBox">
     <div id="effectTitle" style="font-size: 22px; font-weight: bold; color: #d35400; margin-bottom: 20px;"></div>
@@ -108,6 +110,9 @@
     <div style="width: 400px; height: 300px;">
       <canvas id="thirdDiceChart"></canvas>
     </div>
+    <div style="width: 400px; height: 300px;">
+      <canvas id="fourthDiceChart"></canvas>
+    </div>
   </div>
 
   <button id="resetStatsBtn" onclick="resetStats()">Statistik zurücksetzen</button>
@@ -115,14 +120,17 @@
   <script>
     const diceFaces = ['⚀','⚁','⚂','⚃','⚄','⚅'];
     const thirdDiceFaces = ['Vorrücken','Stehenbleiben'];
-    const defaultEffects = ["Knappheit:Jeder Spieler wählt eine Rohstoff- oder Handelswarenkarte und gibt sie ab. Sie wird in den Vorrat zurückgelegt.", "Ein Wirbelsturm zieht auf:Jeder Spieler würfelt mit einem Würfel: Bei 1–2 muss er eine Straße oder ein Schiff vom Spielplan entfernen fals möglich.", "Korruption:Jeder Spieler muss eine Fortschrittskarte abgeben.", "Feuer im Lager:Jeder Spieler muss einen Rohstoff und eine Handelsware abgeben. Wer nichts hat muss auch nichts abgeben.", "Unruhe:Ein Ritter jedes Spielers wird deaktiviert (der stärkste).", "Kriegsgewinnler:Der Räuberwürfler darf sich eine Rohstoff- und eine Handelsware von jedem Spieler wünschen.", "Heimliche Förderung:Der Würfler darf eine Fortschrittskarte ziehen, auch wenn er kein Stadtausbau hat. Dafür muss der Würfler 3 beliebige Rohstoffe/Handelswaren abgeben.", "Schatz gefunden:Der Würfler erhält 1 Stoff.", "Schatz gefunden:Der Würfler erhält 1 Geldsack.", "Schatz gefunden:Der Würfler erhält 1 Papier.", "Schatz gefunden:Der Würfler erhält 1 Zauberstein.", "Schatz gefunden:Der Würfler erhält 1 Brot.", "Schatz gefunden:Der Würfler erhält 1 Salz.", "Dürre:Jeder Spieler muss die hälfte seiner Getreide und seiner Brot vorräte abgeben (mindestens 1).", "Erdrutsch:Jeder Spieler muss die hälfte seiner Lehm und seiner Zauberstein vorräte abgeben (mindestens 1).", "Waldbrand:Jeder Spieler muss die hälfte seiner Holz und seiner Papier vorräte abgeben (mindestens 1).", "Einsturz:Jeder Spieler muss die hälfte seiner Erz und seiner Geldsack vorräte abgeben (mindestens 1).", "Seuche:Jeder Spieler muss die hälfte seiner Wolle und seiner Stoff vorräte abgeben (mindestens 1).", "Revolte in der Stadt:Der Würfler muss eine seiner Städte zurück zur Siedlung abbauen (freie Wahl). Er darf sich Drei Rohstoffe von der Bank aussuchen.", "Steuerschuld:Jeder Spieler muss die Hälfte seiner Handkarten abgeben egal wie viele er hat.", "Räuber:Versetze den Räuber ganz normal", "Räuber:Versetze den Räuber ganz normal", "Räuber:Versetze den Räuber ganz normal", "Räuber:Versetze den Räuber ganz normal", "Räuber:Versetze den Räuber ganz normal", "Räuber:Versetze den Räuber ganz normal", "Räuber:Versetze den Räuber ganz normal", "Räuber:Versetze den Räuber ganz normal", "Räuber:Versetze den Räuber ganz normal", "Räuber:Versetze den Räuber ganz normal", "Räuber:Versetze den Räuber ganz normal", "Räuber:Versetze den Räuber ganz normal", "Räuber:Versetze den Räuber ganz normal", "Räuber:Versetze den Räuber ganz normal", "Räuber:Versetze den Räuber ganz normal", "Überfall auf das Lager:Jeder Spieler gibt einen zufälligen Rohstoff an den linken Nachbarn ab.", "Aufstand der Bauern:Alle Städte verlieren ihre Handelswaren-Produktion für diese Runde.", "Handelssperre:Spieler dürfen bis zur nächsten 7 nicht mehr untereinander handeln. Handeln mit der Bank und dem Händler ist weiterhin erlaubt.", "Bestechung:Der Würfler darf einen Ritter deaktivieren und einen anderen dafür aktivieren.", "Barbarenüberfall!:Die Barbaren rücken sofort 1 Feld vor, zusätzlich zur normalen Bewegung.", "Rohstoffroulette:Alle Spieler legen ihre Handkarten verdeckt in einen Stapel. Dann wird gleichmäßig neu verteilt", "Vertauschung der Schätze:Jeder Spieler tauscht seine Handkarten mit dem Spieler rechts.", "Vertauschung der Schätze:Jeder Spieler tauscht seine Handkarten mit dem Spieler links.", "Der Schwarzmarkt:Jeder Spieler darf einen Handel 1:1 mit dem Vorrat machen, egal welche Ware.", "Hungerzeit:Spieler mit 2 oder mehr Städten verlieren 1 Rohstoff pro Stadt die sie besitzen.", "Tauschbörse:Jeder Spieler gibt zwei Handkarten verdeckt an die Mitte. Dann zieht jeder Spieler eine Karte beginnent mit dem Räuberwürfler bis die karten aufgebraucht sind.", "Ritter-Meuterei:Der stärkste Ritter jedes Spielers wird deaktiviert.", "Barbarenalarm:Die Barbaren greifen sofort an, als würde der Barbarenindikator voll sein – Angriff nach normalen Regeln.", "Falscher Alarm:Die Barbaren rücken um 1 Feld zurück.", "Söldneraufstand:Jeder aktive Ritter kostet sofort 1 Rohstoff deiner Wahl, sonst wird er deaktiviert.", "Erntefest:Alle Felder mit der Zahl 8 produzieren sofort einen Rohstoff diese kommen alle in die Mitte. Dann zieht jeder Spieler eine Karte beginnent mit dem Räuberwürfler bis die karten aufgebraucht sind.", "Erntefest:Alle Felder mit der Zahl 9 produzieren sofort einen Rohstoff diese kommen alle in die Mitte. Dann zieht jeder Spieler eine Karte beginnent mit dem Räuberwürfler bis die karten aufgebraucht sind.", "Erntefest:Alle Felder mit der Zahl 10 produzieren sofort einen Rohstoff diese kommen alle in die Mitte. Dann zieht jeder Spieler eine Karte beginnent mit dem Räuberwürfler bis die karten aufgebraucht sind.", "Erntefest:Alle Felder mit der Zahl 6 produzieren sofort einen Rohstoff diese kommen alle in die Mitte. Dann zieht jeder Spieler eine Karte beginnent mit dem Räuberwürfler bis die karten aufgebraucht sind.", "Erntefest:Alle Felder mit der Zahl 5 produzieren sofort einen Rohstoff diese kommen alle in die Mitte. Dann zieht jeder Spieler eine Karte beginnent mit dem Räuberwürfler bis die karten aufgebraucht sind.", "Erntefest:Alle Felder mit der Zahl 4 produzieren sofort einen Rohstoff diese kommen alle in die Mitte. Dann zieht jeder Spieler eine Karte beginnent mit dem Räuberwürfler bis die karten aufgebraucht sind.", "Erntefest:Alle Felder mit der Zahl 11 produzieren sofort einen Rohstoff diese kommen alle in die Mitte. Dann zieht jeder Spieler eine Karte beginnent mit dem Räuberwürfler bis die karten aufgebraucht sind.", "Erntefest:Alle Felder mit der Zahl 3 produzieren sofort einen Rohstoff diese kommen alle in die Mitte. Dann zieht jeder Spieler eine Karte beginnent mit dem Räuberwürfler bis die karten aufgebraucht sind.", "Erntefest:Alle Felder mit der Zahl 2 und 12 produzieren sofort einen Rohstoff diese kommen alle in die Mitte. Dann zieht jeder Spieler eine Karte beginnent mit dem Räuberwürfler bis die karten aufgebraucht sind.", "Doppelte Räuberaktion:Der Räuberwürfler darf zwei verschiedene Spieler bestehlen. Die Bestohlenen Spieler dürfen den Räuber versetzen aber keine Karte stehlen (jeder einen Räuber).", "Ertragssperre:Bestimme beim nächsten Würfelzug ob die Zahl gespielt wird oder neu gewürfelt (alle Würfel).", "Fluch der 7:Alle Spieler müssen zwei Karten abgeben anstatt der normalen Abgeberegel."];
+    const fourthDiceColors = ['🔵','🟡','🟢','🟣','🔴','⚫'];
+    const fourthDiceNames = ['blau','gelb','grün','pink','rot','schwarz'];
+
+    const defaultEffects = ["Du musst einmal tanzen!", "Singe ein Lied!", "Erzähle einen Witz!", "Mache 10 Liegestütze!"];
     let effects = JSON.parse(localStorage.getItem("sevenEffects")) || defaultEffects;
     let stats = JSON.parse(localStorage.getItem("diceStats")) || Array(11).fill(0);
     let thirdDiceStats = JSON.parse(localStorage.getItem("thirdDiceStats")) || [0, 0];
+    let fourthDiceStats = JSON.parse(localStorage.getItem("fourthDiceStats")) || Array(6).fill(0);
     let rollingDisabled = false;
 
-    const ctx1 = document.getElementById('statsChart').getContext('2d');
-    const statsChart = new Chart(ctx1, {
+    const statsChart = new Chart(document.getElementById('statsChart'), {
       type: 'bar',
       data: {
         labels: Array.from({length: 11}, (_, i) => (i + 2).toString()),
@@ -144,8 +152,7 @@
       }
     });
 
-    const ctx2 = document.getElementById('thirdDiceChart').getContext('2d');
-    const thirdDiceChart = new Chart(ctx2, {
+    const thirdDiceChart = new Chart(document.getElementById('thirdDiceChart'), {
       type: 'pie',
       data: {
         labels: ['Vorrücken', 'Stehenbleiben'],
@@ -157,31 +164,53 @@
       }
     });
 
+    const fourthDiceChart = new Chart(document.getElementById('fourthDiceChart'), {
+      type: 'pie',
+      data: {
+        labels: fourthDiceNames,
+        datasets: [{
+          label: 'Farbe vierter Würfel',
+          data: fourthDiceStats,
+          backgroundColor: ['#3498db', '#f1c40f', '#2ecc71', '#e84393', '#e74c3c', '#34495e']
+        }]
+      }
+    });
+
     function rollDice() {
       if (rollingDisabled) return;
-
       rollingDisabled = true;
 
       const number1 = Math.floor(Math.random() * 6) + 1;
       const number2 = Math.floor(Math.random() * 6) + 1;
       const third = Math.floor(Math.random() * 6);
+      const fourth = Math.floor(Math.random() * 6);
+
       const thirdOutcome = third < 3 ? 'Vorrücken' : 'Stehenbleiben';
+      const fourthColor = fourthDiceColors[fourth];
+      const fourthText = fourthDiceNames[fourth];
+
       const sum = number1 + number2;
 
       document.getElementById('dice1').textContent = diceFaces[number1 - 1];
       document.getElementById('dice2').textContent = diceFaces[number2 - 1];
       document.getElementById('dice3').textContent = thirdOutcome === 'Vorrücken' ? '➡️' : '⛔️';
+      document.getElementById('dice4').textContent = fourthColor;
+
       document.getElementById('result').textContent = `Gesamtergebnis: ${sum}`;
       document.getElementById('thirdResult').textContent = `Dritter Würfel: ${thirdOutcome}`;
+      document.getElementById('fourthResult').textContent = `Vierter Würfel (Farbe): ${fourthText}`;
 
       stats[sum - 2]++;
-      localStorage.setItem("diceStats", JSON.stringify(stats));
-      statsChart.update();
+      thirdOutcome === 'Vorrücken' ? thirdDiceStats[0]++ : thirdDiceStats[1]++;
+      fourthDiceStats[fourth]++;
 
-      if (thirdOutcome === 'Vorrücken') thirdDiceStats[0]++;
-      else thirdDiceStats[1]++;
+      localStorage.setItem("diceStats", JSON.stringify(stats));
       localStorage.setItem("thirdDiceStats", JSON.stringify(thirdDiceStats));
+      localStorage.setItem("fourthDiceStats", JSON.stringify(fourthDiceStats));
+
+      statsChart.update();
       thirdDiceChart.update();
+      fourthDiceChart.update();
 
       if (sum === 7) {
         const randomEffect = effects[Math.floor(Math.random() * effects.length)];
@@ -222,12 +251,16 @@
     function resetStats() {
       stats = Array(11).fill(0);
       thirdDiceStats = [0, 0];
+      fourthDiceStats = Array(6).fill(0);
       localStorage.setItem("diceStats", JSON.stringify(stats));
       localStorage.setItem("thirdDiceStats", JSON.stringify(thirdDiceStats));
+      localStorage.setItem("fourthDiceStats", JSON.stringify(fourthDiceStats));
       statsChart.data.datasets[0].data = stats;
-      statsChart.update();
       thirdDiceChart.data.datasets[0].data = thirdDiceStats;
+      fourthDiceChart.data.datasets[0].data = fourthDiceStats;
+      statsChart.update();
       thirdDiceChart.update();
+      fourthDiceChart.update();
     }
   </script>
 </body>
