--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
       document.getElementById('dice4').textContent = fourthColor;
 
       document.getElementById('result').textContent = `Gesamtergebnis: ${sum}`;
-      document.getElementById('thirdResult').textContent = `Dritter Würfel: ${thirdOutcome}`;
-      document.getElementById('fourthResult').textContent = `Vierter Würfel (Farbe): ${fourthText}`;
+      document.getElementById('thirdResult').textContent = `Barbarenwürfel: ${thirdOutcome}`;
+      document.getElementById('fourthResult').textContent = `Handelsgilde: ${fourthText}`;
 
       stats[sum - 2]++;
       thirdOutcome === 'Vorrücken' ? thirdDiceStats[0]++ : thirdDiceStats[1]++;
